# schemas-python

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  PYTHON2_FIX.md  README.md  README_zh.md  TEST_SUMMARY.md  app_site_model.py  dataclass.py  debug_assertion.py  debug_defaults.py  debug_fields.py  debug_getters.py  debug_name_method.py  demo_complete.py  demo_custom_error_messages.py  demo_enhanced_dataclass.py  exceptions.py  fields.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_tests.py  run_custom_error_tests.py  setup.py  test_all_with_assertions.py  test_comprehensive_assertions.py  test_custom_error_messages.py  test_custom_error_messages_unittest.py  test_custom_getters.py  test_dataclass_fields.py  test_final.py  test_getter_self_call.py  test_listfield_dataclass.py  test_python2_compat.py  tox.ini
.github/workflows/: ci.yml
docs/: PROJECT_STRUCTURE.md
examples/: advanced_features.py  basic_usage.py  custom_error_messages.py  real_world_examples.py
schema_dataclass/: __init__.py  dataclass.py  fields.py
schemas_dataclass/: __init__.py  dataclass.py  fields.py
tests/: conftest.py  test_custom_error_messages.py  test_dataclass.py  test_fields.py  test_integration.py
